# NdkDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ndk/lingxiao/ndkproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_ndk_lingxiao_ndkproject_Hello.h  native-lib.cpp
app/src/main/java/com/ndk/lingxiao/ndkproject/: Hello.java  MainActivity.java
app/src/test/java/com/ndk/lingxiao/ndkproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
